data/derived/sp14/progs/unify/prog4067.ml.out
Characters 75-88:
  wwhile (f, 2),b);;
  ^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a -> 'a * bool
